# pre-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CODEOWNERS  README.md  gitbot  gitbot.pub  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: ci.yml  main.yml  update-subtrees.yml
hooks/: __init__.py  check_pep672_ascii.py  conventional_pre_commit.py  forbidden_files.py  prevent-file-edits.py
test/: __init__.py  conventional_pre_commit_test.py  test_forbidden_files_hook.py  test_pep_672_hook.py  tox.ini
test/fixtures/: .gitignore  pyproject.toml.complete  pyproject.toml.default  pyproject.toml.scope_only  pyproject.toml.type_only
test/fixtures/git/: COMMIT_EDITMSG
