[tool.poetry]
name = "pre-commit"
version = "0.2.0"
description = "A collection of pre-commit hooks used by Hyperfine"
authors = ["Joel Castillo <jcastillo@hyperfine.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
toml = "0.10.2"

[tool.poetry.dev-dependencies]
tox = "3.25.0"
pytest = "7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.conventional_commit_check]
